Copy files and add test line
Files copied form Matt's link https://codesandbox.io/s/ops-challenge-w2xvqn?file=/index.html
and add a line to test

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <a href="#" target="_blank"> on GitHub</a> and
           <a href="#" target="_blank">hosted on Netlify</a>
         </p>
+        <p>just a test line</p>
       </footer>
     </div>
   </body>
