Enter homework requirement and delete test line
change 'Your Name' to "Siti Safiah Mohammad', add links to GitHub Profile, repository and netlify link.
Deleted test line

--- a/index.html
+++ b/index.html
@@ -47,11 +47,21 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/chubbyle" target="_blank"
+            >Siti Safiah Mohammad</a
+          >
+          and is
+          <a
+            href="https://github.com/chubbyle/SCW6--GitHub-Hosting"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a href="https://cool-pika-e0670f.netlify.app" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
-        <p>just a test line</p>
       </footer>
     </div>
   </body>
